# courseProjects

./: nn-from-scratch.ipynb
LLC_Replacement_Policy/: .gitignore
LLC_Replacement_Policy/chao_implementation/src/c_implement_opt_csc369_svn/a2/: .gitignore  CMakeLists.txt  Gemfile  Makefile  README.md  analyze_trace.rb  beladys_anomaly.txt  clock.c  fifo.c  lru.c  opt.c  pagetable.c  pagetable.h  rand.c  run_all.rb  sim.c  simpleloop.c
LLC_Replacement_Policy/chao_implementation/src/c_implement_opt_csc369_svn/a3/: CMakeLists.txt  Makefile  README  ext2.c  ext2.h  ext2_cp.c  ext2_ln.c  ext2_mkdir.c  ext2_rm.c
MLRedditHiveMind/: .gitignore  GenerateWordFrequencyNormalized.py  README.md  RScriptForPlots.R  dataFrame.py  decisiontree.py  knn.py  naiveBayes.py  plot.py  sqlite3
MLRedditHiveMind/.ipynb_checkpoints/: NeuralNet-checkpoint.ipynb
MLRedditHiveMind/data/: AppleData.csv  ISIS_Data.csv  ObamaData.csv  RepublicansData.csv  SandersData.csv  TeslaData.csv  WindowsData.csv  americaData.csv  chinaData.csv  politics.csv  politics_100.csv  (+14 more)
R_graph_publication/: README.md  script_fig1.R  script_fig2.R  script_fig3.R  script_fig4.R  script_fig5.R  script_fig6.R  script_fig7.R  script_fig8.R
barcode/: README.txt  read_barcode.py  setup.py
eCommerceUticket/: about.html  about.php  getuser.php  index.php  index1.html  main.css  memberHome.html  memberHome.php  registration.php  signup.html  test.test
environmentDB_site/: README.md  manage.py
infectionControlFetchData/: README.md  Untitled.py  __init__.py  attributeOfInterest.txt  dbConfig.py  main.py  readMssql.py
(+132 files in other folders)
